Fixed elements inside the back-end aboutme-card that were getting out of the box on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ nav ul a:hover {
 }
 .aboutme-languages {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
@@ -615,7 +615,13 @@ nav ul a:hover {
         width: 75%;
     }
 }
-@media only screen and (max-width: 450px){
+@media only screen and (max-width: 453px){
+    .aboutme-card {
+        padding: 30px 10px 10px 10px;
+    }
+    .aboutme-card-container {
+        padding: 20px;
+    }
     .aboutme-text {
         width: 90%;
     }
